Basic JWT token authentication schema.
Protected url samples.

SISEC grant / login intent. Mockup. Things still need to be done for approaching real situation.
